fixed overflow issue

--- a/home.css
+++ b/home.css
@@ -119,6 +119,7 @@ pre {
   background-color: rgb(1, 22, 39);
   height: 100px;
   color: white;
+  overflow-y: auto;
 }
 
 
